fix message from fatal errors in final mode

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1152,7 +1152,7 @@
 %    \end{macrocode}
 %    \begin{macrocode}
 \def\@fxfatal@final#1{%
-  \@fxpkgerror{'#1' fixme left in final version}{%
+  \@fxpkgerror{'#1' fatal error left in final version}{%
     You are processing your document in final mode,\MessageBreak
     but you still have some FiXme fatal errors left behind.\MessageBreak
     Type X to quit, fix your document, and rerun LaTeX.}}
