fix wrong level sectionning for \fxsetup

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1441,7 +1441,7 @@
 
 %    \end{macrocode}
 %
-% \subsection{The \cs{fxsetup} macro}
+% \subsubsection{The \cs{fxsetup} macro}
 % \begin{macro}{\fxsetup}
 %   The inevitable setup macro, extremely impressive yet as trivial as can be
 %   with the \texttt{xkeyval} package\ldots
