--- a/fixme.dtx
+++ b/fixme.dtx
@@ -581,8 +581,9 @@
 
 %    \end{macrocode}
 % \begin{macro}{\@fxprefixdeprecatecmd}
-%   Since version 4 comes with a lot of \texttt{fixme} to \texttt{fx} prefix
-%   change, we have a special macro for this:
+%   Since version 4 of \fixme{} comes with a lot of \texttt{fixme} to
+%   \texttt{fx} prefix change, we have a special macro to do this for
+%   deprecated commands:
 % \end{macro}
 %    \begin{macrocode}
 \newcommand\@fxprefixdeprecatecmd[2][]{%
@@ -637,8 +638,9 @@
 
 %    \end{macrocode}
 % \begin{macro}{\@fxprefixdeprecaterenewable}
-%   Since version 4 comes with a lot of \texttt{fixme} to \texttt{fx} prefix
-%   change, we have a special macro for this:
+%   Since version 4 of \fixme{} comes with a lot of \texttt{fixme} to
+%   \texttt{fx} prefix change, we have a special macro to do this for
+%   deprecated renewable commands:
 % \end{macro}
 %    \begin{macrocode}
 \newcommand\@fxprefixdeprecaterenewable[2][]{%
