--- a/TODO
+++ b/TODO
@@ -95,4 +95,5 @@ text, but doesn't show comments
   and the footnote which is not sticked to the text
 
 * Provide a collection of themes as separate source files, redefining existing
-  (or adding user) layouts. See marginnote, and the todonotes package etc.
+  (or adding user) layouts. See marginnote, pdfcomment, the todonotes package
+  etc. 
